# Parallel-Low-Poly-Image

./: CMakeCache.txt  CMakeLists.txt  Makefile  ParaLowPoly  README.md  cmake_install.cmake
source/: CMakeLists.txt  LowPolySolver.cpp  LowPolySolver.cu  Makefile  cmake_install.cmake  delauney.cu  img_utils.cu  img_utils.h
source/CPU/: LowPolySolver.cu  Makefile  Solver  delauney.cu  delauney.h  img_utils.cu  point.cu  point.h  triangle.cu
source/GPU/: LowPolySolver.cu  Makefile  delauney.cu  delauney.h  img_utils.cu  img_utils.h
